// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`db should be able to get a list 1`] = `
Array [
  Object {
    "id": "baz",
    "title": "title-baz",
  },
  Object {
    "id": "foo",
    "title": "title-foo",
  },
]
`;

exports[`db should be able to get a list after (starting) some value 1`] = `
Array [
  Object {
    "id": "eoo",
    "title": "title-eoo",
  },
  Object {
    "id": "foo",
    "title": "title-foo",
  },
]
`;

exports[`db should be able to get a list after some value 1`] = `
Array [
  Object {
    "id": "foo",
    "title": "title-foo",
  },
]
`;

exports[`db should be able to get a list before (starting) some value 1`] = `
Array [
  Object {
    "id": "baz",
    "title": "title-baz",
  },
  Object {
    "id": "eoo",
    "title": "title-eoo",
  },
]
`;

exports[`db should be able to get a list before some value 1`] = `
Array [
  Object {
    "id": "baz",
    "title": "title-baz",
  },
]
`;

exports[`db should be able to get a list with a limited count 1`] = `
Array [
  Object {
    "id": "baz",
    "title": "title-baz",
  },
]
`;

exports[`db should be able to get a list with a specific query 1`] = `
Array [
  Object {
    "id": "foo",
    "title": "title-foo",
  },
  Object {
    "id": "bar",
    "title": "title-bar",
  },
]
`;

exports[`db should be able to get a reversed list 1`] = `
Array [
  Object {
    "id": "foo",
    "title": "title-foo",
  },
  Object {
    "id": "baz",
    "title": "title-baz",
  },
]
`;

exports[`db should be able to get an item with relations 1`] = `
Object {
  "id": "foo",
  "value": Object {
    "authors1": Array [
      Object {
        "id": "foo",
        "name": "foo-name",
      },
    ],
  },
}
`;

exports[`db should be able to put & get a value 1`] = `
Object {
  "id": "bar",
  "value": Object {
    "title": "bar",
  },
}
`;

exports[`db should throw when value isn't there 1`] = `[NotFoundError: ID not found in database]`;
